Fix password toggle button z-index

--- a/style.css
+++ b/style.css
@@ -994,6 +994,7 @@ button,
 #password-toggle {
   position: absolute;
   right: 8px;
+  z-index: 2;
   background: none;
   border: none;
   cursor: pointer;
